# datehelper

./: .gitignore  LICENSE  README.md  datehelper.code-workspace  pyproject.toml
src/datehelper/: __init__.py  _datefunctions.py
tests/: __main__.py  datehelper_test.py
